<resources>
    <string name="app_name">Podcaster</string>
    <string name="image_view_description">image</string>
    <string name="speed">Speed</string>
    <string name="author">Author:</string>
    <string name="about">About</string>

    <!--  Details  -->
    <string name="details_rated_by_users">Rated by %d users</string>
    <string name="exo_playback_speed">%1$.1fx</string>
    <string name="book_total_duration">minutes: %1$d</string>

    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
    <string name="search">Search</string>
    <string name="discover">Discover</string>
    <string name="listen">Listen</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>

    <!--  Search  -->
    <string name="search_hint">Search for book, author…</string>
    <string name="statistics">Account statistics</string>

    <!--  Profile  -->
    <string name="rating">Rating: %d</string>
    <string name="total_auditions">Total auditions: %d</string>
    <string name="balance">Balance: %d$</string>
    <string name="subscribers">Subscribers: %d</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="publications">Publications</string>
    <string name="results">Results</string>
    <string name="genres">Genres</string>
    <string name="library">Library</string>
</resources>