<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_red"
    tools:context=".ui.SearchFragment">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:text="@string/search"
        android:textStyle="bold"
        android:textColor="@color/black_80"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/filter"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:tint="@color/black_90"
        app:srcCompat="@drawable/ic_baseline_filter_list_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:textColorHint="@color/gray"
        android:background="@drawable/round_background"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTitle"
        app:startIconDrawable="@drawable/ic_round_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:background="@drawable/round_background"
            android:textCursorDrawable="@drawable/search_cursor"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/search_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        android:text="@string/results"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/black_80"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/genres"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/black_80"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/f_p"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:elevation="8dp"
        android:foreground="@drawable/ripple_effect"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/genres"
        app:layout_constraintTop_toBottomOf="@id/genres">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/first_publication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:background="@color/gray" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="@drawable/gradient_top_to_bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/normal_margin"
            android:background="@color/transparent"
            android:text="Alternative rock"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/pink_red"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/s_p"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:elevation="8dp"
        android:foreground="@drawable/ripple_effect"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/f_p"
        app:layout_constraintTop_toBottomOf="@id/f_p">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/second_publication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:background="@color/gray" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="@drawable/gradient_top_to_bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/normal_margin"
            android:background="@color/transparent"
            android:text="Funk rock"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/pink_red"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/t_p"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:elevation="8dp"
        android:foreground="@drawable/ripple_effect"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/s_p"
        app:layout_constraintTop_toBottomOf="@id/s_p">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/third_publication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:background="@color/gray" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="@drawable/gradient_top_to_bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/normal_margin"
            android:background="@color/transparent"
            android:text="Post punk"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/pink_red"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_results"
        tools:visibility="gone"
        tools:listitem="@layout/book_item" />

</androidx.constraintlayout.widget.ConstraintLayout>