<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/pink_red">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:tint="@color/black_80"
        app:srcCompat="@drawable/ic_round_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:text="@string/profile"
        android:textStyle="bold"
        android:textColor="@color/black_80"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintBottom_toBottomOf="@id/back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/settings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:tint="@color/black_70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exo_styled_controls_settings" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="@dimen/big_margin"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:background="@color/black_10"
        app:srcCompat="@drawable/ic_round_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:textColor="@color/black_80"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        tools:text="Jake Wharton" />

    <TextView
        android:id="@+id/statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/biggest_margin"
        android:text="@string/statistics"
        android:textColor="@color/black_80"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <TextView
        android:id="@+id/subscribers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:textColor="@color/black_80"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="@id/statistics"
        app:layout_constraintTop_toBottomOf="@id/statistics"
        tools:text="Subscribers: 921" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/black_80"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="@id/subscribers"
        app:layout_constraintTop_toBottomOf="@id/subscribers"
        tools:text="Rating: 4.7" />

    <TextView
        android:id="@+id/total_auditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/black_80"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="@id/rating"
        app:layout_constraintTop_toBottomOf="@id/rating"
        tools:text="Total auditions: 228" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/black_80"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="@id/total_auditions"
        app:layout_constraintTop_toBottomOf="@id/total_auditions"
        tools:text="@string/balance" />

    <TextView
        android:id="@+id/subscriptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/subscriptions"
        android:textColor="@color/black_80"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="@id/balance"
        app:layout_constraintTop_toBottomOf="@id/balance" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/first_sub_profile_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:background="@color/black_10"
        app:srcCompat="@drawable/ic_round_profile"
        app:layout_constraintStart_toStartOf="@id/subscriptions"
        app:layout_constraintTop_toBottomOf="@+id/subscriptions" />

    <TextView
        android:id="@+id/first_sub_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="Flea"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintTop_toBottomOf="@id/first_sub_profile_image"
        app:layout_constraintStart_toStartOf="@id/first_sub_profile_image"
        app:layout_constraintEnd_toEndOf="@+id/first_sub_profile_image" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/second_sub_profile_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:background="@color/black_10"
        app:srcCompat="@drawable/ic_round_profile"
        app:layout_constraintTop_toTopOf="@id/first_sub_profile_image"
        app:layout_constraintStart_toEndOf="@id/first_sub_profile_image"
        app:layout_constraintBottom_toBottomOf="@+id/first_sub_profile_image" />

    <TextView
        android:id="@+id/second_sub_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="Zinnatullin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintTop_toBottomOf="@id/second_sub_profile_image"
        app:layout_constraintStart_toStartOf="@id/second_sub_profile_image"
        app:layout_constraintEnd_toEndOf="@+id/second_sub_profile_image" />

    <TextView
        android:id="@+id/publications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/publications"
        android:textColor="@color/black_80"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="@id/subscriptions"
        app:layout_constraintTop_toBottomOf="@id/subscriptions" />

    <androidx.cardview.widget.CardView
        android:id="@+id/f_p"
        android:layout_width="95dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:foreground="@drawable/ripple_effect"
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@id/publications"
        app:layout_constraintTop_toBottomOf="@id/publications">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/first_publication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:background="@color/gray" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gradient_top_to_bottom"
            android:layout_gravity="bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/transparent"
            android:layout_margin="@dimen/small_margin"
            android:textStyle="bold"
            android:textColor="@color/pink_red"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="Ultranumb" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/s_p"
        android:layout_width="95dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/big_margin"
        android:foreground="@drawable/ripple_effect"
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@id/f_p"
        app:layout_constraintTop_toTopOf="@id/f_p" >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/second_publication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:background="@color/gray" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gradient_top_to_bottom"
            android:layout_gravity="bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/transparent"
            android:layout_margin="@dimen/small_margin"
            android:textStyle="bold"
            android:textColor="@color/pink_red"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="Guano Apes" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="95dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/big_margin"
        android:foreground="@drawable/ripple_effect"
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@id/s_p"
        app:layout_constraintTop_toTopOf="@id/s_p" >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/third_publication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:background="@color/gray" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/gradient_top_to_bottom"
            android:layout_gravity="bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/transparent"
            android:layout_margin="@dimen/small_margin"
            android:textStyle="bold"
            android:ellipsize="end"
            android:textColor="@color/pink_red"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="Otherside" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>